@@ -1,3 +1,8 @@
+2002-01-31  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* [w3m-dev 02949] fix for #undef USE_MIGEMO
+	* main.c (dispincsrch): need #ifdef USE_MIGEMO
+
 2002-01-31  Fumitoshi UKAI <ukai@debian.or.jp>
 
 	* [w3m-dev 02946] toggle migemo
